--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1112,9 +1112,20 @@ iframe{
 }
 #aboutus .counterBox{
 padding:40px 30px;
+height:155px;
+}
+.whatweDoCar .owl-nav button.owl-next{
+    right: -4%;
+}
+.whatweDoCar .owl-nav button.owl-prev{
+    left: -4%;
 }
 }
 @media(min-width:767px) and (max-width:1023px){
+    .navbar-expand-lg .navbar-nav .nav-link{
+   display: inline-block;
+   margin-bottom:10px;
+    }
     .blogDate span{
         display: inline-block;
         margin-top:20px;
@@ -1135,7 +1146,7 @@ padding:40px 30px;
         }
         header{
             height:auto;
-            background-color: rgba(255,255,255,.3);
+            background-color: rgba(0,0,0,1);
         }
  
    
