--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -959,12 +959,19 @@ margin-bottom:30px;
     margin-right:-3px;
     transition: all .5s;
 }
+.tags span{
+    margin-top:10px;
+    display: block;
+    float: left;
+    margin-top:10px;
+}
 .tags span a{
     background-color: #6464645e;
     color:white;
     padding:5px 10px;;
     border-radius: 25px;
     margin-right:10px;
+    margin-top:10px;
 }
 .tags span a:hover{
 background-color: #F7CA44;
