--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -990,7 +990,10 @@ margin-left: 10px;;
 .tags span a:hover{
 background-color: #F7CA44;
 }
-
+.commentBox.addComment{
+    margin-left:50px;
+    margin-top:70px;
+}
 .commentBox.addComment .comment{
     border:0;
     padding: 0;;
@@ -1203,6 +1206,10 @@ height:155px;
 }
 }
 @media(min-width:767px) and (max-width:1023px){
+    .commentBox.addComment{
+        margin-left:20px;
+        margin-top:50px;
+    }
     .navbar-expand-lg .navbar-nav .nav-link{
    display: inline-block;
    margin-bottom:10px;
